Adding Raw Data Files
This commit adds the raw bus stop census responses, the anonymyzation code, and the email key. Some files are ignored for privacy reasons. Also removing bus_stop_scorecard script because it is not relevant at this time.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 .RData
 .Ruserdata
 data/raw_data/private/Test Data.txt
+code/raw_code/00_anonymize_data.R
+data/raw_data/private/2021-01-01 stopcensus_responses.json
+data/raw_data/private/key.csv
